同步导航条

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
       <ul id="productsNav" class="nav-group-container">
         <li class="nav-group">
           <button class="group-btn">
-            <span>旗下产品</span>
+            <span>其他网站</span>
           </button>
           <ul class="category-list product-list">
             <li><a href="https://anshengsen.github.io/QianfanWallpaper/" class="category-btn active">千帆壁纸</a></li>
             <li><a href="https://anshengsen.github.io/QianfanCreative/" target="_blank" rel="noopener noreferrer" class="category-btn">千帆创意</a></li>
             <li><a href="https://anshengsen.github.io/QianfanTag/" target="_blank" rel="noopener noreferrer" class="category-btn">千帆标签</a></li>
-            <li><a href="https://anshengsen.github.io/QianfanNav/" target="_blank" rel="noopener noreferrer" class="category-btn">千帆导航</a></li>
+            <li><a href="https://anshengsen.github.io/QianfanNav/" target="_blank" rel="noopener noreferrer" class="category-btn">千帆书签</a></li>
             <li><a href="https://anshengsen.github.io/QianfanColor/" target="_blank" rel="noopener noreferrer" class="category-btn">千帆色卡</a></li>
             <li><a href="https://anshengsen.github.io/QianfanPicker/" target="_blank" rel="noopener noreferrer" class="category-btn">千帆拾色</a></li>
           </ul>
